--- a/#sourse/scss/style.scss
+++ b/#sourse/scss/style.scss
@@ -1,11 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,400;0,700;1,400;1,700&family=Magra:wght@700&family=Red+Hat+Text:wght@500&display=swap');
 @import "nullstyle.scss";
 
+
+
 body {
     font-family: Aleo;
     margin: 0 auto;
-
+    position: relative;
 }
+
+.shadow-screen{
+    background-color: rgba(0,0,0,0.2);
+    transition: 0.5s;
+    &:not(.hamburger-menu){
+        filter: brightness(80%);
+    }
+}
+
+
+
 .background-image{
     background: no-repeat url(../../img/background/1.jpg);
     background-position: center;
@@ -18,6 +31,7 @@ body {
         background-position: center;
         background-size: cover;
         padding: 0;
+        overflow: hidden;
     }
 }
 
@@ -96,6 +110,7 @@ body {
     font-weight: 500;
     font-size: 16px;
     line-height: 21px;
+    cursor: pointer;
     color: #FFFFFF;
     &:not(:last-child){
         padding: 0 42px 0 0;
@@ -119,6 +134,14 @@ body {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 2px 3px rgba(13, 96, 111, 0.16);
     border-radius: 10px;
     color: #FFFFFF;
+}
+
+.hamburger{
+    display: none;
+}
+
+.hamburger-menu{
+    display: none;        
 }
 
 @media (max-width: 420px){
@@ -155,7 +178,63 @@ body {
         top: calc(50% - 1.5px);
         left: 0;
     }
+
+    .hamburger-menu{
+        display: block;
+        position: fixed;
+        left: 0;
+        top: 0;
+        border-radius: 10px;
+        width: 160px;
+        height: 253px;
+        padding: 15px;
+        background: #F2785C;
+        transform: translateX(100vw);
+        transition: transform 0.5s; 
+    
+        &.active {
+            transform: translateX(calc(100vw - 160px));
+        }
+
+        ul{
+            text-align: right;
+            padding-top: 29px;
+        }
+
+        li{
+            padding-bottom: 10px;
+        }
+
+        a{
+            color: #FFFFFF;
+            font-family: 'Red Hat Text';
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 21px;
+        }
+
+        div{
+            cursor: pointer; 
+            position: absolute; 
+            padding-top: 7px;
+            &:before,&:after{
+                content: ""; 
+                position: absolute; 
+                border-radius: 2px;
+                width: 21px; 
+                height: 2px; 
+                background: rgba(255, 255, 255, 0.7);
+            }
+            &:before {
+                transform: rotate(45deg);
+            }
+            &:after {
+                transform: rotate(-45deg);
+            }
+        }
+    }
 }
+
 
 .preview{
     max-width: 892px;
