--- a/#sourse/scss/style.scss
+++ b/#sourse/scss/style.scss
@@ -12,6 +12,7 @@ body {
 .shadow-screen{
     background-color: rgba(0,0,0,0.2);
     transition: 0.5s;
+    position: fixed;
     &:not(.hamburger-menu){
         filter: brightness(80%);
     }
@@ -401,7 +402,7 @@ body {
     @media (max-width: 420px) {
             display: flex;
             position: absolute;
-            top: calc(50% - 12.5px);
+            top: 130px;
             width: 100%;
             justify-content: space-between;
             padding: 0 25px;
@@ -471,7 +472,7 @@ body {
     justify-content: center;
     @media (max-width: 420px){
         position: absolute;
-        bottom: 50px;
+        bottom: 72px;
         gap: 6px;
         left: calc(50% - 18px);
     }
