--- a/#sourse/scss/style.scss
+++ b/#sourse/scss/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,400;0,700;1,400;1,700&family=Magra:wght@700&family=Red+Hat+Text:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,400;0,700;1,400;1,700&family=Magra:wght@700&family=Red+Hat+Text:wght@400;500&display=swap');
 @import "nullstyle.scss";
 
 
@@ -192,6 +192,7 @@ body {
         background: #F2785C;
         transform: translateX(100vw);
         transition: transform 0.5s; 
+        z-index: 20;
     
         &.active {
             transform: translateX(calc(100vw - 160px));
@@ -236,6 +237,16 @@ body {
     }
 }
 
+.menu-overlay{
+    display: none;
+    background-color: rgba(0, 0, 0, 0.25);
+    z-index: 10;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;  
+}
 
 .preview{
     max-width: 892px;
@@ -654,5 +665,176 @@ body {
     background-repeat: no-repeat;
 }
 
+.login-pop-up {
+    width: 650px;
+    height: 660px;
+    background: linear-gradient(177.09deg, #FFFFFF 6.15%, #0D606F 202.69%);
+    box-shadow: none;
+    border-radius: 16px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: calc(50% - 325px);
+    transform: translateY(-100%);
+    transition: transform 0.5s; 
+    z-index: 30;
 
+    &.active-login{
+        transform: translateY(calc(-100% + 50vh + 330px));
+    }
+}
 
+.login-pop-up__title {
+    color: #0D606F;
+    font-family: 'Aleo';
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 38px;
+    padding: 25px 0 10px 0;
+}
+
+.sign-button {
+    width: 560px;
+    height: 56px;
+    font-family: 'Red Hat Text';
+    font-weight: 400;   
+    line-height: 26px;
+    box-shadow: 0px 0px 3px rgba(13, 96, 111, 0.08), 0px 2px 3px rgba(13, 96, 111, 0.16);
+    text-align: center;
+    border-radius: 10px;
+    margin-top: 20px;
+}
+
+.sign-button__facebook {
+    background: #1877F2;
+    border-radius: 10px;
+    button {
+    background: #1877F2;
+    padding: 15px 0;
+    color: #FFFFFF;
+    font-size: 20px;
+    position: relative;
+    &:before{
+        background-image: url("../../img/icons/pop\ up\ facebook.svg");
+        background-repeat: no-repeat;
+        content: " ";
+        height: 23px;
+        width: 100%;
+        position:absolute;
+        right: 38.5px;
+        }
+    }
+}
+
+.sign-button__google {
+    background: #FFFFFF;
+    border-radius: 10px;
+    button {
+        background: #FFFFFF;
+        padding: 15px 0;
+        color: #0D606F;
+        font-size: 20px;
+        position: relative;
+        &:before{
+            background-image: url("../../img/icons/pop\ up\ google.svg");
+            background-repeat: no-repeat;
+            content: " ";
+            height: 23px;
+            width: 100%;
+            position:absolute;
+            right: 38.5px;
+            }
+        }
+}
+
+.sing-button__main {
+    background: #0D606F;
+    border-radius: 10px;
+    button {
+        background: #0D606F;
+        color: #FFFFFF;
+        padding: 15px 0;
+        font-size: 20px;
+        position: relative;
+    }
+}
+
+.line {
+    font-family: 'Aleo';
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px;
+    color: rgba(13, 96, 111, 0.5);
+    font-size: 20px;
+    position: relative;
+    min-width: 560px;
+    text-align: center;
+    margin: 30px 0 10px 0;
+    &::before,
+    &::after{
+        border-top: 1px solid rgba(13, 96, 111, 0.5);
+        content: "";
+        position: absolute;
+        top: 12px;
+        width: calc(50% - 21px);
+    }
+    &::after{
+        right: 0px;
+    }
+    &::before{
+        left: 0px;
+    }
+}
+
+.solid-line {
+    min-width: 560px;
+    border-top: 1px solid rgba(13, 96, 111, 0.5);
+}
+
+.form-field {
+    font-family: 'Aleo';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #0D606F;
+    margin-bottom: 5px;
+    &:not(:first-child){
+        margin-top: 20px;
+    }
+}
+
+.field {
+    background: #FFFFFF;
+    box-shadow: inset 0px 0px 3px rgba(13, 96, 111, 0.08), inset 0px 2px 3px rgba(13, 96, 111, 0.16);
+    border-radius: 10px;
+    height: 54px;
+    width: 560px;
+}
+
+.password-prompt {
+    font-family: 'Aleo';
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 18px;
+    text-decoration-line: underline;
+    color: #0D606F;
+    text-shadow: 0px 2px 3px rgba(255, 255, 255, 0.16);
+    margin: 10px 0 26px 0;
+}
+
+.register {
+    font-family: 'Aleo';
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 18px;
+    color: rgba(13, 96, 111, 0.5);
+    text-shadow: 0px 2px 3px rgba(255, 255, 255, 0.16);
+    margin-top: 20px;
+    span {
+        color:#0D606F;
+        text-decoration: underline;
+    }
+}
